# minidb

./: CMakeLists.txt  README.md  database_manager.cpp  database_manager.hpp  error_reporter.cpp  error_reporter.hpp  main.cpp  output_formatter.cpp  output_formatter.hpp  query_executor.cpp  query_executor.hpp  sql_parser.cpp  sql_parser.hpp  test1.csv  test1.sql
databases/db_university/: student.csv
